<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kim.bisos.sos.ActivitySOS">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/activity_sos_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_sos_title"
                android:maxLines="1"
                android:text="바퀴가 펑크 났어요 도와주세요."
                android:singleLine="true" />

            <EditText
                android:id="@+id/activity_sos_body_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_sos_body"
                android:inputType="textMultiLine"
                android:text="지금 바퀴가 펑크가 났는데 끌고 가고 있습니다 위치는 안양천에서 한강 방향으로 가고 있습니다. 도와 주시면 사례 하겠습니다 옷의 색은 빨강 레깅스를 입고 있습니다 "
                android:maxLines="5"
                />

            <RadioGroup
                android:id="@+id/activity_sos_status_rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="요청"
                    android:id="@+id/radioButton"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="진행"
                    android:id="@+id/radioButton2"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="완료"
                    android:id="@+id/radioButton3"
                    android:checked="false" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="기한만료"
                    android:id="@+id/radioButton4"
                    android:checked="false" />
            </RadioGroup>

            <Button
                android:id="@+id/activity_sos_commit_bt"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_commit"
                android:textStyle="bold" />
            <Button
                android:id="@+id/activity_sos_cancel_bt"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_cancel"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
